--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 # site domain, full URL to the production location of your collection
 url: https://www.lib.uidaho.edu
 # path to location on the domain if necessary e.g. /digital/hjccc
-baseurl: /digital/demo
+baseurl: /digital/rwhp
 # location of code, the full url to your github repository
 source-code: https://github.com/uidaholib/digital-collections-template-cb-csv
 
@@ -21,14 +21,14 @@ digital-assets: https://www.lib.uidaho.edu/assets
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: CollectionBuilder CSV
+title: Rural Women's History Project
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Digital Collection Magic with Static Web Technologies
+tagline: Interviews with rural women in Latah, Benewah, Clearwater, Nez Perce, and Shoshone counties, Idaho, concerning the changing roles of rural women.
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "CollectionBuilder-CSV is a template for creating digital collection exhibits using static web technology."
+description: "Interviews with rural women in north Idaaho discussing the history of rural women's roles and what changes have affected their lives and how they see themselves."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho;history;inland northwest
+keywords: idaho;history;women
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
