--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # URL VARIABLES
 #
 # site domain, full URL to the production location of your collection
-url: https://www.lib.uidaho.edu
+url: https://www.lib.uidaho.edu/digital/rwhp
 # path to location on the domain if necessary e.g. /digital/hjccc
 baseurl: /digital/rwhp
 # location of code, the full url to your github repository
