Update feature image

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ title: College of Natural Resources Collection
 tagline: Tagline for the collection goes here
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "Description of the collection goes here."
+description: "The University of Idaho's College of Natural Resources Collection features a digital archive of photographs, documents, and multimedia focusing on the college's research, experimental forests, publications, and history."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
 keywords: idaho;history;inland northwest
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
