Add tagline and update description

--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,12 @@ digital-assets: https://www.lib.uidaho.edu/assets
 # title of site appears in banner
 title: College of Natural Resources Collection
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Tagline for the collection goes here
+tagline: A collection of multimedia materials from the University of Idaho's College of Natural Resources (CNR)
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "The University of Idaho's College of Natural Resources Collection features a digital archive of photographs, documents, and multimedia focusing on the history of the college."
+description: "The <a href='https://www.uidaho.edu/cnr' target='_blank'>College of Natural Resources (CNR)</a> has a long-standing history, beginning in 1909 and continuing to this present day. During the expanse of 100+ years, CNR has reshaped its mission and services, thanks to the leadership and vision of its Deans. This digital collection includes a majority of materials pertaining to the album <em>University of Idaho: College of Forestry, Wildlife and Range Sciences 1909-1984</em>. There are a wide breadth of featured material types: documents, correspondence, brochures, pictures, journals, and video and audio files."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho;history;inland northwest
+keywords: idaho;natural resources;forestry;university
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: University of Idaho Library
 
