--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -8,7 +8,7 @@
 #
 # featured image is used in home page banner and in meta markup to represent the collection
 # use either an objectid (from an item in this collect), a relative location of an image in this repo, or a full url to an image elsewhere
-featured-image: sanborn-ketchum-1890-001
+featured-image: https://www.lib.uidaho.edu/digital/objects/sanborn/sanborn-ketchum-1890-001.jpg
 # optional: add extra padding around collection title for a larger image feature. 
 home-title-y-padding: 6em # the margin from the top your title portion will appear.
 # optional: change position of background image, center, top, bottom
@@ -30,19 +30,26 @@ subjects-min: 1 # min size for subject cloud, too many terms = slow load time!
 subjects-stopwords: # set of subjects separated by ; that will be removed from display, e.g. boxers;boxing
 
 ##########
-# LOCATIONS PAGE
+# CITIES PAGE
 #
-locations-fields: location # set of fields separated by ; to be featured in the cloud (leave blank or comment out to not generate)
-locations-min: 1 # min size for subject cloud, too many terms = slow load time!
-locations-stopwords: # set of subjects separated by ; that will be removed from display, e.g. boxers;boxing
+cities-fields: city # set of fields separated by ; to be featured in the cloud (leave blank or comment out to not generate)
+cities-min: 1 # min size for subject cloud, too many terms = slow load time!
+cities-stopwords: # set of subjects separated by ; that will be removed from display, e.g. boxers;boxing
+
+##########
+# COUNTIES PAGE
+#
+counties-fields: county # set of fields separated by ; to be featured in the cloud (leave blank or comment out to not generate)
+counties-min: 1 # min size for subject cloud, too many terms = slow load time!
+counties-stopwords: # set of subjects separated by ; that will be removed from display, e.g. boxers;boxing
 
 ##########
 # MAP PAGE
 #
 # see _data/map-config.csv for field display options
-latitude: 46.727485 #to determine center of map
-longitude: -117.014185 #to determine center of map
-zoom-level: 5 # zoom level for map 
+latitude: 45.37269148126362 #to determine center of map
+longitude: -114.23852666539321 #to determine center of map
+zoom-level: 6 # zoom level for map 
 map-base: Esri_WorldStreetMap # set default base map, choose from: Esri_WorldStreetMap, Esri_NatGeoWorldMap, Esri_WorldImagery, OpenStreetMap_Mapnik
 map-search: true # not suggested with large collections
 map-search-fuzziness: 0.35 # fuzzy search range from 1 = anything to 0 = exact match only
@@ -61,9 +68,9 @@ year-nav-increment: 5 # set increments to auto gen nav years
 # 
 # add metadata fields for export in data downloads (tip: paste in first row of csv)
 # comma delimited list, reference url is automatic
-metadata-export-fields: "title,creator,date,description,subject,location,latitude,longitude,source,identifier,type,format,language,rights,rightsstatement"
+metadata-export-fields: "title,creator,date,description,subject,county,location,latitude,longitude,source,identifier,type,format,language,rights,rightsstatement"
 # generate a facets list for given fields, comma delimited
-metadata-facets-fields: "subject,creator,format"
+metadata-facets-fields: "subject,location,county"
 
 ##########
 # Compound Objects 
