--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ title: Idaho Sanborn Maps
 tagline: Historic fire insurance maps of Idaho created by the Sanborn Map Company
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: The Idaho Sanborn Maps digital collection consists of about 200 insurance maps created by the Sanborn Map Company. This collection of maps covers 42 counties and 81 cities in Idaho, from the 1880s to 1920s.
+description: The Idaho Sanborn Maps digital collection consists of fire insurance maps created by the Sanborn Map Company. This collection of maps covers 42 counties and 81 cities in Idaho, from the 1880s to 1920s.
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
 keywords: idaho;history;inland northwest;maps
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
