--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -40,9 +40,9 @@ locations-stopwords: # set of subjects separated by ; that will be removed from 
 # MAP PAGE
 #
 # see _data/map-config.csv for field display options
-latitude: 37.74881069614324 #to determine center of map
-longitude: -25.568321616311593  #to determine center of map
-zoom-level: 3 # zoom level for map  
+latitude: 44.6791 #to determine center of map
+longitude: 114.4217  #to determine center of map
+zoom-level: 8 # zoom level for map  
 map-base: Esri_WorldStreetMap # set default base map, choose from: Esri_WorldStreetMap, Esri_NatGeoWorldMap, Esri_WorldImagery, OpenStreetMap_Mapnik
 map-search: true # not suggested with large collections
 map-search-fuzziness: 0.35 # fuzzy search range from 1 = anything to 0 = exact match only
