--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -63,7 +63,7 @@ year-nav-increment: 5 # set increments to auto gen nav years
 # comma delimited list, reference url is automatic
 metadata-export-fields: "objectid,parentid,filename,title,creator,date,archival_date,description,subject,location,latitude,longitude,source,identifier,type,format_original,format,finding_aid,digital_collection,contributing_institution,language,rights,rightsstatement,display_template,object_location,image_small,image_thumb"
 # generate a facets list for given fields, comma delimited
-metadata-facets-fields: "subject,creator,format"
+metadata-facets-fields: "subject,creator"
 
 ##########
 # Compound Objects 
