--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ digital-assets: https://www.lib.uidaho.edu/assets
 # title of site appears in banner
 title: Other Faces, Other Lives
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Asian Americans in Idaho
+tagline: Interviews of eight Asian-American families on their lives and experiences in Idaho
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "A video oral history project produced from 1987-90 interviewing 8 Asian-American families about their experiences living, working, and raising a family in Idaho."
