--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ title: Rural Women's History Project
 tagline: Interviews with rural women in Latah, Benewah, Clearwater, Nez Perce, and Shoshone counties, Idaho, concerning the changing roles of rural women.
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "Interviews with rural women in north Idaaho discussing the history of rural women's roles and what changes have affected their lives and how they see themselves."
+description: "Interviews with rural women in north Idaho discussing the history of rural women's roles and what changes have affected their lives and how they see themselves."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
 keywords: idaho;history;women
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
