--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ digital-assets: https://www.lib.uidaho.edu/assets
 # title of site appears in banner
 title: Rural Women's History Project
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Interviews with rural women in Latah, Benewah, Clearwater, Nez Perce, and Shoshone counties, Idaho, concerning the changing roles of rural women.
+tagline: Interviews with rural women in Latah, Benewah, Clearwater, Nez Perce, and Shoshone counties, Idaho, concerning the changing roles of rural women
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "Interviews with rural women in north Idaho discussing the history of rural women's roles and what changes have affected their lives and how they see themselves."
