--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ title: Other Faces, Other Lives
 tagline: Interviews of eight Asian-American families on their lives and experiences in Idaho
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "A video oral history project produced from 1987-90 interviewing 8 Asian-American families about their experiences living, working, and raising a family in Idaho."
+description: "A video oral history project produced from 1987-90 interviewing eight Asian-American families about their experiences living, working, and raising a family in Idaho."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
 keywords: idaho;history;Asian-American
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
