comment out noindex

--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ organization-logo-nav: https://www.lib.uidaho.edu/media/digital/liblogo_white.pn
 # ROBOTS EXCLUDE
 #
 # set noindex to true if you do NOT want Google to index your site
-noindex: true 
+# noindex: true 
 
 ##########
 # BUILD SETTINGS 
